[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rosny"
description = "Lightweight library for building concurrent systems."
authors = [
    { name = "Ruslan Baikulov", email = "ruslan1123@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "mypy==1.8.0",
    "ruff==0.1.14",
]
docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.5",
]
examples = [
    "opencv-python==4.9.0.80",
    "mediapipe==0.10.9",
]

[project.urls]
Repository = "https://github.com/lRomul/rosny"
Documentation = "https://lromul.github.io/rosny"

[tool.setuptools.dynamic]
version = { attr = "rosny.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["rosny"]

[tool.pytest.ini_options]
minversion = 6.0
addopts = "--cov=rosny"
testpaths = ["tests"]

[tool.mypy]
files = [
    "rosny",
    "tests",
    "examples",
]

[tool.ruff]
line-length = 89
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
